// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Snackbar] renders TestWrapper without crashing 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <
    onPress={[Function]}
    testID="Button"
  >
    <Text>
      show snack bar
    </Text>
  </>
</View>
`;

exports[`[Snackbar] using provider renders TestElement using whole screen view without crashing 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <
      onPress={[Function]}
      testID="Button"
    >
      <Text>
        show snack bar
      </Text>
    </>
  </View>
</View>
`;

exports[`[Snackbar] using provider renders TestElement without crashing 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <
      onPress={[Function]}
      testID="Button"
    >
      <Text>
        show snack bar
      </Text>
    </>
  </View>
</View>
`;
